python scripts in bin, cython module compiled

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,10 @@ AC_PREREQ([2.61])
 #AC_INIT(Imogene, 1.0, [Hervé Rouault rouault@lps.ens.fr Marc Santolini marc.santolini@lps.ens.fr])
 AC_INIT(Imogene, m4_esyscmd([tools/git-version-gen .tarball-version]), [rouault@lps.ens.fr marc.santolini@lps.ens.fr])
 AM_INIT_AUTOMAKE()
+
+LT_PREREQ([2.2])
+LT_INIT([dlopen])
+
 AC_CONFIG_SRCDIR([src/imogene.cpp])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -37,7 +41,6 @@ AM_PATH_PYTHON([2.5],,[AC_MSG_ERROR([no python version >=2.5 detected])])
 AC_PROG_CXX
 AC_PROG_CC
 AM_PROG_CC_C_O
-AC_PROG_RANLIB
 
 # Checks for libraries.
 AC_CHECK_LIB([m],[cos],,[AC_MSG_ERROR([math functions required.])])
