--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -18,35 +18,35 @@
 # along with Imogene; see the file COPYING  If not,
 # see <http://www.gnu.org/licenses/>.
 
-BUILT_SOURCES = getalign.py mapping.py extractbackground.py weblogo-display.py\
-				emf2fasta.pyx 
+bin_SCRIPTS = getalign mapping extractbackground weblogo-display
 
-nodist_python_PYTHON = getalign.py mapping.py extractbackground.py\
-					   weblogo-display.py emf2fasta.pyx 
-CLEANFILES = $(python_PYTHON)
+CLEANFILES = $(bin_SCRIPTS)
 EXTRA_DIST = getalign.py.in mapping.py.in extractbackground.py.in\
-			 weblogo-display.py.in emf2fasta.pyx.in 
+			 weblogo-display.py.in
 
 do_subst = sed -e 's,[@]PYTHON[@],$(PYTHON),g'\
 		       -e 's,[@]pythondir[@],$(pythondir),g'\
                -e 's,[@]pkgdatadir[@],$(pkgdatadir),g'
 
-getalign.py: getalign.py.in
+getalign: getalign.py.in
 	$(do_subst) < $< > $@
 	chmod +x $@
 
-mapping.py: mapping.py.in
+mapping: mapping.py.in
 	$(do_subst) < $< > $@
 	chmod +x $@
 
-extractbackground.py: extractbackground.py.in
+extractbackground: extractbackground.py.in
 	$(do_subst) < $< > $@
 	chmod +x $@
 
-weblogo-display.py: weblogo-display.py.in
+weblogo-display: weblogo-display.py.in
 	$(do_subst) < $< > $@
 	chmod +x $@
 
-emf2fasta.pyx: emf2fasta.pyx.in
-	$(do_subst) < $< > $@
-	chmod +x $@
+emf2fasta.c: emf2fasta.pyx
+	python setup.py build_ext --inplace
+
+pyexec_LTLIBRARIES = emf2fasta.la
+emf2fasta_la_SOURCES = emf2fasta.c
+emf2fasta_la_LDFLAGS = -avoid-version -module
