--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@ test
 *.swp
 .version
 .tarball-version
+ltmain.sh
+m4/ltoptions
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt\~obsolete.m4
+m4/libtool.m4
+config.guess
+config.sub
