--- a/mobyle/Makefile.am
+++ b/mobyle/Makefile.am
@@ -27,7 +27,7 @@ EXTRA_DIST = imogene.xml.in imogene_env.xml.in help.md
 do_subst = $(SED) -e 's,[@]PYTHON[@],$(PYTHON),g' -e 's,[@]pythondir[@],$(pythondir),g' -e 's,[@]bindir[@],$(bindir),g' -e 's,[@]PACKAGE_VERSION[@],$(PACKAGE_VERSION),g' -e 's,[@]PACKAGE_NAME[@],imogene,g' -e 's,[@]PACKAGE[@],$(PACKAGE),g'
 # The substitution of @PACKAGE_NAME@ into imogene (and not into the value of
 # $PACKAGE_NAME is a workaround to ensure that the filename has the same value 
-# as the "name" xml variable
+# as the xml 'name' variable
 
 imogene.xml: imogene.xml.in
 	$(do_subst) < $(srcdir)/imogene.xml.in > imogene.xml
